# stock-market-app

./: .env  .gitignore  LICENSE  Makefile  buildspec.yml  commonCommands.txt  requirements.txt  setup.cfg
src/stockSamples26/: SP500History.py  SectorIndustryTickerParser.py  TickerData.py  TickerLevelDataParser.py  TickerTree.py  __init__.py  main.py
src/stockSamples26.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/stockSamples26/data/: SP_500.xml
src/stock_market_bytetheory/: SP500History.py  SectorIndustryTickerParser.py  TickerLevelDataParser.py  __init__.py
src/stock_market_bytetheory.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/stock_market_bytetheory/data/: SP_500.xml
tests/: main.py  test.py
