[metadata]
name = stockSamples26
version = 1.0.8
author = Robbie Blom
description = Provides some sample stock data and helpers for supporting a stock samples app
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
project_urls =
    repository = https://github.com/rblom6/stock-market
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
* =
    *.csv
    *.xml
